teste de funcionamento

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>FUTURANDO</h1>
             <p >Explore os mistérios desvendados pelas</p>
             <img class="vinteeduascartas" src="images/22cartas.png" alt="22cartas">
-            <p class="primerio"> do Tarô e inicie sua jornada de Sabedoria e Transformação Pessoal, 
+            <p class="primerio"> TESTE do Tarô e inicie sua jornada de Sabedoria e Transformação Pessoal, 
                 Mesmo se você nunca tenha pego em um baralho de Tarô antes</p>
         </div>
     </header>
