alinhamento de divs ao centro

--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
     </header>
 
     <main>
-        <div>
+        <div class="vsl--box">
             <video src=""></video>
             <button class="buttonEbook">Eu quero meu ebook</button>
         </div>
 
-        <div>
+        <div class="beneficios--title">
             <h1>QUAIS BENEFÍCIOS O PODER DO TARÔ TRARÁ PARA VOCÊ?</h1>
+        </div>
 
-            <div class="beneficio1">
+        <div class="beneficios--box">
+            <div class="beneficio--item">
                 <img src="" alt="">
                 <p>Autoconhecimento profundo</p>
                 <p>Ao explorar as 22 cartas do Tarot, você terá a oportunidade de mergulhar em sua própria jornada de autoconhecimento. 
@@ -36,7 +38,7 @@
                     a si mesmo de uma maneira mais profunda.</p>
             </div>
 
-            <div class="beneficio2">
+            <div class="beneficio--item">
                 <img src="" alt="">
                 <p>Orientação e clareza</p>
                 <p>O Tarot é uma ferramenta valiosa para obter orientação e clareza em relação a diferentes aspectos da sua vida. 
@@ -44,7 +46,7 @@
                     Com o ebook de Tarot, você terá acesso a interpretações e significados das cartas, capacitando-o a tomar decisões mais conscientes e alinhadas com o seu verdadeiro eu.</p>
             </div>
 
-            <div class="beneficio3">
+            <div class="beneficio--item">
                 <img src="" alt="">
                 <p>Desenvolvimento espiritual</p>
                 <p>O Tarot é um caminho para o desenvolvimento espiritual, permitindo que você se conecte com uma dimensão mais profunda de si mesmo e do universo ao seu redor. 
@@ -52,7 +54,7 @@
                     Isso abrirá portas para uma jornada espiritual enriquecedora e significativa.tttt</p>
             </div>
 
-            <div class="beneficio4">
+            <div class="beneficio--item">
                 <img src="" alt="">
                 <p>Transformação pessoal</p>
                 <p>O Tarot tem o poder de desencadear transformações pessoais significativas. Ao explorar as cartas e suas mensagens, você terá a oportunidade de identificar padrões, 
@@ -61,37 +63,47 @@
             </div>
         </div>
 
-        <button class="buttonEbook">Eu quero meu ebook</button>
-
-        <div>
-            <article>
-                <img src="images/aprendataro.png" alt="aprenda taro">
-            </article>
-
-            <aside>
-                <h2>APRENDA</h2>
-                <h3>TARÔ DE UMA VEZ POR TODAS!</h3>
-            </aside>
+        <div class="conteudo--box">
+            <button class="buttonEbook">Eu quero meu ebook</button>
+            <div class="img-and-text">
+                <div class="img--box">
+                    <img src="images/aprendataro.png" alt="aprenda taro">
+                </div>
+                <div class="text--box">
+                    <div class="title--box">
+                        <h2>APRENDA</h2>
+                        <h3>TARÔ DE UMA VEZ POR TODAS!</h3>
+                    </div>
+                    <div class="textandtext">
+                        Se você já se perguntou sobre o significado oculto das cartas, provavelmente sabe que o Tarô é muito mais do que um simples baralho. Com o e-book "O Poder do Tarô", você terá em mãos um guia completo para explorar as profundezas desse conhecimen-
+                        to ancestral. Imagine-se desvendando os segredos das 22 cartas, interpretando suas mensagens e desbravando os caminhos do passado, presente e futuro. Nossa jornada pelo Tarô irá revelar um mundo fascinante de possibilidades e insights. Não deixe essa
+                        oportunidade escapar. Descubra o poder do Tarô e transforme sua vida de maneiras surpreendentes.
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="depoimento">
+
+        <div class="depoimento--box">
             <h2>Depoimentos</h2>
             <h3>DE QUEM JÁ se consultou com o senhor futurando</h3>
 
-            <div class="depoimento1">
-
+            <div class="depoimentos-items">
+                <div class="depoimento">
+                    .
+                </div>
+    
+                <div class="depoimento">
+                    .
+                </div>
+    
+                <div class="depoimento">
+                    .
+                </div>
             </div>
-
-            <div class="depoimento2">
-
-            </div>
-
-            <div class="depoimento3">
-
-            </div>
+            <button class="buttonEbook">Eu quero meu ebook</button>
         </div>
 
-        <button class="buttonEbook">Eu quero meu ebook</button>
 
         <div>
             <img src="images/opoderdotaroTabletCelular.png" alt="o poder do taro">
