update mudando fonts

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <div class="cabecalho">
             <img class="logofuturando" src="images/logofuturando.png" alt="futurandologo">
-            <h1>FUTURANDO</h1>
-            <p>Explore os mistérios desvendados pelas</p>
+            <h1 class="titlefuturando">FUTURANDO</h1>
+            <p class="cabecalhop">Explore os mistérios desvendados pelas</p>
             <img class="vinteeduascartas" src="images/22cartas.png" alt="22cartas">
-            <p class="primerio"> TESTE do Tarô e inicie sua jornada de Sabedoria e Transformação Pessoal, 
+            <p class="cabecalhop"> TESTE do Tarô e inicie sua jornada de Sabedoria e Transformação Pessoal, 
                 Mesmo se você nunca tenha pego em um baralho de Tarô antes</p>
         </div>
     </header>
@@ -32,32 +32,32 @@
         <div class="beneficios--box">
             <div class="beneficio--item">
                 <img src="" alt="">
-                <p>Autoconhecimento profundo</p>
-                <p>Ao explorar as 22 cartas do Tarot, você terá a oportunidade de mergulhar em sua própria jornada de autoconhecimento. 
+                <p class="beneficio--p--title">Autoconhecimento profundo</p>
+                <p class="beneficio--p--conteudo">Ao explorar as 22 cartas do Tarot, você terá a oportunidade de mergulhar em sua própria jornada de autoconhecimento. 
                     O Tarot oferece insights poderosos sobre sua personalidade, emoções, desafios e potenciais, permitindo que você compreenda 
                     a si mesmo de uma maneira mais profunda.</p>
             </div>
 
             <div class="beneficio--item">
                 <img src="" alt="">
-                <p>Orientação e clareza</p>
-                <p>O Tarot é uma ferramenta valiosa para obter orientação e clareza em relação a diferentes aspectos da sua vida. 
+                <p class="beneficio--p--title">Orientação e clareza</p>
+                <p class="beneficio--p--conteudo">O Tarot é uma ferramenta valiosa para obter orientação e clareza em relação a diferentes aspectos da sua vida. 
                     Ele pode ajudá-lo a tomar decisões importantes, oferecer insights sobre relacionamentos, carreira, saúde e muito mais. 
                     Com o ebook de Tarot, você terá acesso a interpretações e significados das cartas, capacitando-o a tomar decisões mais conscientes e alinhadas com o seu verdadeiro eu.</p>
             </div>
 
             <div class="beneficio--item">
                 <img src="" alt="">
-                <p>Desenvolvimento espiritual</p>
-                <p>O Tarot é um caminho para o desenvolvimento espiritual, permitindo que você se conecte com uma dimensão mais profunda de si mesmo e do universo ao seu redor. 
+                <p class="beneficio--p--title">Desenvolvimento espiritual</p>
+                <p class="beneficio--p--conteudo">O Tarot é um caminho para o desenvolvimento espiritual, permitindo que você se conecte com uma dimensão mais profunda de si mesmo e do universo ao seu redor. 
                     O e-book de Tarot irá guiá-lo através das diferentes cartas e arcanos, ajudando-o a compreender os símbolos e a energia que eles representam. 
                     Isso abrirá portas para uma jornada espiritual enriquecedora e significativa.tttt</p>
             </div>
 
             <div class="beneficio--item">
                 <img src="" alt="">
-                <p>Transformação pessoal</p>
-                <p>O Tarot tem o poder de desencadear transformações pessoais significativas. Ao explorar as cartas e suas mensagens, você terá a oportunidade de identificar padrões, 
+                <p class="beneficio--p--title">Transformação pessoal</p>
+                <p class="beneficio--p--conteudo">O Tarot tem o poder de desencadear transformações pessoais significativas. Ao explorar as cartas e suas mensagens, você terá a oportunidade de identificar padrões, 
                     superar obstáculos e abraçar novas possibilidades. O ebook de Tarot fornecerá as ferramentas necessárias para esse processo de transformação, permitindo que você cresça, 
                     evolua e crie a vida que deseja.</p>
             </div>
