corrigindo e alterando as fontes

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 </div>
                 <div class="text--box">
                     <div class="title--box">
-                        <h2>APRENDA</h2>
-                        <h3>TARÔ DE UMA VEZ POR TODAS!</h3>
+                        <h2 class="aprenda--taro">APRENDA</h2>
+                        <h3 class="aprenda--taro">TARÔ DE UMA VEZ POR TODAS!</h3>
                     </div>
                     <div class="textandtext">
                         Se você já se perguntou sobre o significado oculto das cartas, provavelmente sabe que o Tarô é muito mais do que um simples baralho. Com o e-book "O Poder do Tarô", você terá em mãos um guia completo para explorar as profundezas desse conhecimen-
@@ -85,8 +85,8 @@
 
 
         <div class="depoimento--box">
-            <h2>Depoimentos</h2>
-            <h3>DE QUEM JÁ se consultou com o senhor futurando</h3>
+            <h2 class="depoimento--title">Depoimentos</h2>
+            <h3 class="depoimento--subtitle">DE QUEM JÁ se consultou com o senhor futurando</h3>
 
             <div class="depoimentos-items">
                 <div class="depoimento">
@@ -105,8 +105,32 @@
         </div>
 
 
-        <div>
+        <div class="imagem--tablet--celular">
             <img src="images/opoderdotaroTabletCelular.png" alt="o poder do taro">
+        </div>
+
+        <div class="perguntas--box">
+            <h1 class="perguntas--title">Perguntas Frequentes</h1>
+
+            <div class="perguntas">
+                <p>O que  o Tarot e como ele funciona?</p>
+            </div>
+
+            <div class="perguntas">
+                <p>Quais são os benefícios de aprender a interpretar as cartas do Tarot?</p>
+            </div>
+
+            <div class="perguntas">
+                <p>Como o Tarot pode ajudar na tomada de decisões importantes na minha vida?</p>
+            </div>
+
+            <div class="perguntas">
+                <p>É necessário ter algum tipo de dom especial para utilizar o Tarot?</p>
+            </div>
+
+            <div class="perguntas">
+                <p>Como posso usar o Tarot para obter insights e orientações sobre minha vida pessoal e profissional?</p>
+            </div>
         </div>
     </main>
 
@@ -122,7 +146,7 @@
                 Todos os direitos reservados.</p>
         </div>
 
-        <div>
+        <div class="termos--de--uso">
             <p>Termos de Uso</p>
             <p>Políticas de PrivacidadeP</p>
         </div>
